# lab1_please

./: CMakeLists.txt  test.txt
include/: json.hpp  nlohmann.h  nlohmann.hpp
sources/: json.cpp  n_json.cpp  nlohmann_json.cpp  nomer3.cpp  source.cpp
tests/: test.cpp
